--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,9 +1,23 @@
+html {
+  height: 100%;
+  box-sizing: border-box; }
+
 html * {
-  font-family: "Work Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 16px; }
+  font-family: "Work Sans", "Helvetica Neue", Helvetica, Arial, sans-serif; }
+  html * p {
+    font-size: 16px; }
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit; }
 
 body {
-  background-color: #F7FAFD; }
+  background-color: #F7FAFD;
+  position: relative;
+  padding-bottom: 6rem;
+  margin: 0;
+  min-height: 100%; }
 
 a {
   color: #1674f0 !important; }
