--- a/public/styles/main.sass
+++ b/public/styles/main.sass
@@ -1,17 +1,20 @@
+$main-color: #1674f0
+$accent-color: #f3e439
+
 html
   height: 100%
   box-sizing: border-box
 
 html *
   font-family: "Work Sans", "Helvetica Neue", Helvetica, Arial, sans-serif
-  p
-    font-size: 16px
+
+p
+  font-size: 16px
 
 *,
 *:before,
 *:after
   box-sizing: inherit
-
 
 body
   background-color: #F7FAFD
@@ -21,7 +24,26 @@ body
   min-height: 100%
 
 a
-  color: #1674f0 !important
+  color: $main-color !important
+
+.btn-primary, .btn-primary:hover, .btn-primary:focus
+  position: static
+  display: block
+  margin-right: auto
+  margin-left: auto
+  padding: 18px 60px
+  float: none
+  border: 0px solid #b39b20
+  border-radius: 94px
+  background-color: $accent-color
+  box-shadow: 0 13px 34px 0 rgba(255, 221, 42, .6)
+  font-family: Lato, sans-serif
+  color: #b38c12
+  font-weight: 700
+  letter-spacing: 1px
+  transition: background-color .5s ease 0s, box-shadow 0.5s ease 0s, color 0.5s ease 0s, opacity 900ms, transform 900ms cubic-bezier(0.165, 0.84, 0.44, 1)
+  &:hover
+    background-color: #f3d539
 
 .centered
   margin: 0px auto
@@ -35,7 +57,7 @@ a
     border-top: 3px solid transparent
     font-weight: 500
     &:hover
-      border-top: 3px solid #1674f0
+      border-top: 3px solid $main-color
 
 .hidden
   display: none !important
