--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -5,6 +5,9 @@ html {
 html * {
   font-family: "Work Sans", "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
+h1 {
+  font-weight: 600; }
+
 p {
   font-size: 16px; }
 
@@ -23,7 +26,22 @@ body {
 a {
   color: #1674f0 !important; }
 
+a:-webkit-any-link {
+  text-decoration: none; }
+
+.nav-pills {
+  cursor: pointer; }
+
+.nav > li {
+  display: inline-block !important;
+  float: clear; }
+
+.nav-pills > li.active > a {
+  color: white !important;
+  background-color: #1674f0; }
+
 .btn-primary, .btn-primary:hover, .btn-primary:focus {
+  outline: none;
   position: static;
   display: block;
   margin-right: auto;
@@ -33,7 +51,7 @@ a {
   border: 0px solid #b39b20;
   border-radius: 94px;
   background-color: #f3e439;
-  box-shadow: 0 13px 34px 0 rgba(255, 221, 42, 0.6);
+  box-shadow: 0 10px 20px 0 rgba(255, 221, 42, 0.6);
   font-family: Lato, sans-serif;
   color: #b38c12;
   font-weight: 700;
@@ -58,5 +76,31 @@ a {
 
 .hidden {
   display: none !important; }
+
+.tiers-container {
+  margin-top: 50px;
+  max-width: 700px; }
+  .tiers-container #cost {
+    font-size: 50px;
+    font-weight: 500; }
+  .tiers-container #tier {
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: 3.5px; }
+  .tiers-container .fa-usd {
+    font-size: 20px;
+    font-weight: 500; }
+
+.tier-container {
+  padding-left: 20px;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.09804) 0px 23px 40px 0px;
+  box-sizing: border-box;
+  border-radius: 4px; }
+  .tier-container:nth-child(2) {
+    margin-top: -20px;
+    background-color: #1674f0;
+    color: white;
+    padding-bottom: 75px; }
 
 /*# sourceMappingURL=main.css.map */
