--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -29,12 +29,11 @@ a {
 a:-webkit-any-link {
   text-decoration: none; }
 
-.nav-pills {
-  cursor: pointer; }
-
-.nav > li {
-  display: inline-block !important;
-  float: clear; }
+.nav-pills#billing {
+  cursor: pointer;
+  margin-top: 25px;
+  display: flex;
+  justify-content: center; }
 
 .nav-pills > li.active > a {
   color: white !important;
@@ -79,7 +78,7 @@ a:-webkit-any-link {
 
 .tiers-container {
   margin-top: 50px;
-  max-width: 700px; }
+  max-width: 800px; }
   .tiers-container #cost {
     font-size: 50px;
     font-weight: 500; }
@@ -93,6 +92,8 @@ a:-webkit-any-link {
 
 .tier-container {
   padding-left: 20px;
+  padding-right: 20px;
+  min-width: 250px;
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.09804) 0px 23px 40px 0px;
   box-sizing: border-box;
@@ -102,5 +103,51 @@ a:-webkit-any-link {
     background-color: #1674f0;
     color: white;
     padding-bottom: 75px; }
+
+.btn#free-trial {
+  color: #1674f0;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  background-color: white;
+  border: 2px solid #1674f0;
+  border-radius: 0;
+  font-weight: 500;
+  margin-bottom: 25px;
+  width: 100%; }
+  .btn#free-trial:hover {
+    background-color: #F7FAFD; }
+
+.form-container {
+  margin: 0 auto;
+  max-width: 400px;
+  display: block;
+  margin-bottom: 3rem;
+  box-shadow: 0 3px 50px rgba(0, 0, 60, 0.1), 0 3px 25px rgba(0, 0, 60, 0.3);
+  border-radius: 5px;
+  text-align: center;
+  overflow: hidden; }
+
+.form-container-section {
+  padding: 20 3rem; }
+
+.form-container-section:nth-child(even) {
+  background-color: #f7f7f9; }
+
+/*SHAKE ANIMATION ON BAD LOGIN */
+.bad {
+  animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px; }
+
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0); }
+  20%, 80% {
+    transform: translate3d(2px, 0, 0); }
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0); }
+  40%, 60% {
+    transform: translate3d(4px, 0, 0); } }
 
 /*# sourceMappingURL=main.css.map */
