--- a/public/styles/main.sass
+++ b/public/styles/main.sass
@@ -1,5 +1,6 @@
 $main-color: #1674f0
 $accent-color: #f3e439
+$light-grey: #F7FAFD
 
 html
   height: 100%
@@ -20,7 +21,7 @@ p
   box-sizing: inherit
 
 body
-  background-color: #F7FAFD
+  background-color: $light-grey
   position: relative
   padding-bottom: 6rem
   margin: 0
@@ -32,11 +33,11 @@ a
 a:-webkit-any-link
   text-decoration: none
 
-.nav-pills
+.nav-pills#billing
   cursor: pointer
-.nav > li
-  display: inline-block !important
-  float: clear
+  margin-top: 25px
+  display: flex
+  justify-content: center
 
 .nav-pills>li.active>a
   color: white !important
@@ -82,7 +83,7 @@ a:-webkit-any-link
 // Pricing
 .tiers-container
   margin-top: 50px
-  max-width: 700px
+  max-width: 800px
   #cost
     font-size: 50px
     font-weight: 500
@@ -96,6 +97,8 @@ a:-webkit-any-link
 
 .tier-container
   padding-left: 20px
+  padding-right: 20px
+  min-width: 250px
   background-color: white
   box-shadow: rgba(0, 0, 0, 0.0980392) 0px 23px 40px 0px
   box-sizing: border-box
@@ -106,3 +109,54 @@ a:-webkit-any-link
     background-color: $main-color
     color: white
     padding-bottom: 75px
+
+.btn#free-trial
+  color: $main-color
+  padding-top: 12px
+  padding-bottom: 12px
+  background-color: white
+  border: 2px solid $main-color
+  border-radius: 0
+  font-weight: 500
+  margin-bottom: 25px
+  width: 100%
+  &:hover
+    background-color: $light-grey
+
+//Login component
+.form-container
+  margin: 0 auto
+  max-width: 400px
+  display: block
+  margin-bottom: 3rem
+  box-shadow: 0 3px 50px rgba(0, 0, 60, 0.1), 0 3px 25px rgba(0, 0, 60, 0.3)
+  border-radius: 5px
+  text-align: center
+  overflow: hidden
+
+.form-container-section
+  padding: 20 3rem
+
+.form-container-section:nth-child(even)
+  background-color: #f7f7f9
+
+/*SHAKE ANIMATION ON BAD LOGIN*/
+.bad
+  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both
+  transform: translate3d(0, 0, 0)
+  backface-visibility: hidden
+  perspective: 1000px
+
+
+@keyframes shake
+  10%, 90%
+    transform: translate3d(-1px, 0, 0)
+
+  20%, 80%
+    transform: translate3d(2px, 0, 0)
+
+  30%, 50%, 70%
+    transform: translate3d(-4px, 0, 0)
+
+  40%, 60%
+    transform: translate3d(4px, 0, 0)
