--- a/public/styles/main.sass
+++ b/public/styles/main.sass
@@ -33,6 +33,9 @@ a
 a:-webkit-any-link
   text-decoration: none
 
+.kid-page
+  padding: 0px 50px
+
 .nav-pills#billing
   cursor: pointer
   margin-top: 25px
@@ -108,7 +111,6 @@ a:-webkit-any-link
     margin-top: -20px
     background-color: $main-color
     color: white
-    padding-bottom: 75px
 
 .btn#free-trial
   color: $main-color
@@ -126,6 +128,7 @@ a:-webkit-any-link
 //Login component
 .form-container
   margin: 0 auto
+  padding: 20px
   max-width: 400px
   display: block
   margin-bottom: 3rem
